Agregue 5 componentes que modifican la homePage

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,5 +7,6 @@
 /* 3. Configuras el tema directamente aquí */
 @theme {
   /* Esto le dice a Tailwind: "Tu fuente 'sans' (la predeterminada) ahora es Montserrat" */
-  --font-sans: "Oswald", sans-serif;
+  --font-sans: "Montserrat", sans-serif;
+  --font-serif: "Playfair Display", serif; /* Nueva fuente para títulos */
 }
