--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,11 @@
 
 /* 1. Importas la fuente de Google (pon esto al principio de todo) */
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 /* 2. Importas Tailwind */
 @import "tailwindcss";
 
 /* 3. Configuras el tema directamente aquí */
 @theme {
   /* Esto le dice a Tailwind: "Tu fuente 'sans' (la predeterminada) ahora es Montserrat" */
-  --font-sans: "Montserrat", sans-serif;
-  --font-serif: "Playfair Display", serif; /* Nueva fuente para títulos */
+  --font-sans: "Alumni Sans", sans-serif;
 }
